--- a/index.html
+++ b/index.html
@@ -1,112 +1,236 @@
-import React, { useState } from "react";
-import { ethers } from "ethers";
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Document-Backed Lending DApp</title>
+  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
-// ✅ Replace with your ABI & Contract Address
-const contractABI = [ /* paste your ABI here */ ];
-const contractAddress = "0xC2e0620752E4115cA679d71Ad2c9ee63f2d046Fc";
-
-export default function LoanDapp() {
-  const [wallet, setWallet] = useState(null);
-  const [fileHash, setFileHash] = useState("");
-  const [status, setStatus] = useState("");
-  const [fileName, setFileName] = useState("");
-
-  // Connect wallet
-  const connectWallet = async () => {
-    if (window.ethereum) {
-      try {
-        const provider = new ethers.BrowserProvider(window.ethereum);
-        await provider.send("eth_requestAccounts", []);
-        const signer = await provider.getSigner();
-        setWallet(signer);
-        setStatus("✅ Wallet Connected!");
-      } catch (err) {
-        console.error(err);
-        setStatus("❌ Wallet Connection Failed");
-      }
-    } else {
-      alert("Install MetaMask!");
+  <style>
+    body {
+      background: linear-gradient(to right, #e0f7fa, #ede7f6);
+      font-family: 'Segoe UI', sans-serif;
     }
-  };
-
-  // File upload & hash calculation
-  const handleFileUpload = async (e) => {
-    const file = e.target.files[0];
-    if (!file) return;
-    setFileName(file.name);
-
-    const reader = new FileReader();
-    reader.onload = async (event) => {
-      const fileBuffer = new Uint8Array(event.target.result);
-      const hash = ethers.keccak256(fileBuffer);
-      setFileHash(hash);
-      setStatus(`📂 File "${file.name}" uploaded & hashed!`);
-    };
-    reader.readAsArrayBuffer(file);
-  };
-
-  // Submit Document
-  const submitDocument = async () => {
-    if (!wallet || !fileHash) {
-      setStatus("⚠️ Connect wallet & upload file first!");
-      return;
+    .container {
+      background: rgba(255, 255, 255, 0.85);
+      border-radius: 20px;
+      padding: 30px;
+      margin-top: 20px;
     }
-
-    try {
-      const contract = new ethers.Contract(contractAddress, contractABI, wallet);
-      const tx = await contract.submitDocument(fileHash);
-      await tx.wait();
-      setStatus("✅ Document submitted successfully!");
-    } catch (err) {
-      console.error(err);
-      setStatus("❌ Transaction Failed");
+    .title {
+      font-size: 2.5rem;
+      font-weight: bold;
+      text-align: center;
+      background: linear-gradient(to right, #8e44ad, #3498db);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
-  };
+    .btn {
+      border-radius: 12px;
+      font-weight: 600;
+      transition: 0.3s;
+    }
+    .btn-success { background: linear-gradient(to right, #10b981, #34d399); color: white; border: none; }
+    .btn-warning { background: linear-gradient(to right, #f59e0b, #fbbf24); color: white; border: none; }
+    .btn-primary { background: linear-gradient(to right, #3b82f6, #60a5fa); color: white; border: none; }
+    .btn-purple  { background: linear-gradient(to right, #8b5cf6, #a78bfa); color: white; border: none; }
+    .btn-reset   { background: linear-gradient(to right, #14b8a6, #2dd4bf); color: white; border: none; }
+    #repayStatus { font-weight: bold; }
+    #toastBox {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 9999;
+    }
+    .toast {
+      background-color: #0d6efd;
+      color: white;
+      padding: 12px 20px;
+      border-radius: 10px;
+      margin-top: 10px;
+      animation: slideIn 0.5s ease-out;
+    }
+    @keyframes slideIn {
+      from { opacity: 0; transform: translateX(100px); }
+      to { opacity: 1; transform: translateX(0); }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h2 class="title mb-4">📜 Document-Backed Lending DApp</h2>
 
-  return (
-    <div className="min-h-screen flex flex-col items-center justify-center bg-gradient-to-r from-purple-600 via-pink-500 to-red-500 p-6">
-      <div className="bg-white shadow-2xl rounded-2xl p-8 w-full max-w-lg text-center">
-        <h1 className="text-3xl font-extrabold text-purple-700 mb-6">
-          🌈 Decentralized Loan DApp
-        </h1>
+    <lottie-player
+      src="https://assets5.lottiefiles.com/packages/lf20_ydo1amjm.json"
+      background="transparent"
+      speed="1"
+      style="width: 100px; height: 100px; margin: 0 auto;"
+      loop
+      autoplay>
+    </lottie-player>
 
-        {/* Connect Wallet */}
-        <button
-          onClick={connectWallet}
-          className="mb-6 px-6 py-3 rounded-xl bg-gradient-to-r from-green-400 to-green-600 text-white font-bold shadow-lg hover:scale-105 transition"
-        >
-          {wallet ? "✅ Wallet Connected" : "🔗 Connect Wallet"}
-        </button>
+    <div class="text-end mb-3">
+      <button onclick="resetLoanManually()" class="btn btn-reset btn-sm">🔁 Reset Loan (Lender Only)</button>
+    </div>
 
-        {/* File Upload */}
-        <div className="mb-6">
-          <label className="block text-lg font-semibold text-gray-700 mb-2">
-            📂 Upload Document
-          </label>
-          <input
-            type="file"
-            accept="*/*"
-            onChange={handleFileUpload}
-            className="block w-full text-sm text-gray-700 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 focus:outline-none focus:ring-2 focus:ring-purple-500"
-          />
-          {fileName && (
-            <p className="mt-2 text-sm text-gray-600">Selected: {fileName}</p>
-          )}
+    <div class="card mb-4 p-4">
+      <h5>🔌 Wallet Connection</h5>
+      <button class="btn btn-primary mb-2" onclick="connectWallet()">Connect Wallet</button>
+      <p id="walletAddress" class="text-success"></p>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6 mb-4">
+        <div class="card p-4">
+          <h5>💰 Lender Panel</h5>
+          <input id="interestRate" class="form-control mb-2" placeholder="Interest Rate (%)">
+          <input id="loanAmount" class="form-control mb-2" placeholder="Loan Amount (ETH)">
+          <input type="file" id="lenderDoc" class="form-control mb-3">
+          <button class="btn btn-success w-100" onclick="offerLoan()">Offer Loan</button>
         </div>
+      </div>
 
-        {/* Submit Button */}
-        <button
-          onClick={submitDocument}
-          className="w-full px-6 py-3 rounded-xl bg-gradient-to-r from-blue-500 to-indigo-600 text-white font-bold shadow-lg hover:scale-105 transition"
-        >
-          🚀 Submit Document
-        </button>
-
-        {/* Status */}
-        {status && (
-          <p className="mt-6 text-lg font-medium text-gray-800">{status}</p>
-        )}
+      <div class="col-md-6 mb-4">
+        <div class="card p-4">
+          <h5>📄 Borrower Panel</h5>
+          <input type="file" id="borrowerDoc" class="form-control mb-3">
+          <button class="btn btn-warning w-100 mb-2" onclick="submitDocument()">Submit Document</button>
+          <button class="btn btn-primary w-100 mb-2" onclick="takeLoan()">Take Loan</button>
+          <button class="btn btn-purple w-100 mb-2" onclick="repayLoan()">Repay Loan</button>
+          <p id="repayStatus" class="mt-3 text-danger"></p>
+        </div>
       </div>
     </div>
-  );
-}
+  </div>
+
+  <div id="toastBox"></div>
+
+  <script>
+    function showToast(message, type = "info") {
+      const toast = document.createElement("div");
+      toast.className = "toast";
+      toast.innerText = message;
+      if (type === "error") toast.style.backgroundColor = "#dc3545";
+      if (type === "success") toast.style.backgroundColor = "#28a745";
+      document.getElementById("toastBox").appendChild(toast);
+      setTimeout(() => toast.remove(), 3000);
+    }
+
+    let web3;
+    let account;
+    const contractAddress = "0x1c91347f2A44538ce62453BEBd9Aa907C662b4bD";
+    const contractABI = [ /* paste your ABI JSON here */ ];
+    let contract;
+
+    async function connectWallet() {
+      if (window.ethereum) {
+        web3 = new Web3(window.ethereum);
+        await window.ethereum.request({ method: 'eth_requestAccounts' });
+        const accounts = await web3.eth.getAccounts();
+        account = accounts[0];
+        document.getElementById("walletAddress").innerText = `Connected: ${account}`;
+        contract = new web3.eth.Contract(contractABI, contractAddress);
+        showToast("Wallet connected!", "success");
+      } else {
+        showToast("Please install MetaMask", "error");
+      }
+    }
+
+    async function getFileHash(file) {
+      return new Promise((resolve, reject) => {
+        const reader = new FileReader();
+        reader.onload = async () => {
+          try {
+            const buffer = reader.result;
+            const hashBuffer = await crypto.subtle.digest('SHA-256', buffer);
+            const hashArray = Array.from(new Uint8Array(hashBuffer));
+            const hashHex = "0x" + hashArray.map(b => b.toString(16).padStart(2, '0')).join('');
+            resolve(hashHex);
+          } catch (err) { reject(err); }
+        };
+        reader.onerror = reject;
+        reader.readAsArrayBuffer(file);
+      });
+    }
+
+    async function offerLoan() {
+      const rate = document.getElementById("interestRate").value;
+      const amount = document.getElementById("loanAmount").value;
+      const file = document.getElementById("lenderDoc").files[0];
+      if (!file) return showToast("Please upload a document", "error");
+      const hash = await getFileHash(file);
+      try {
+        await contract.methods.offerLoan(rate, hash).send({ from: account, value: web3.utils.toWei(amount, 'ether') });
+        showToast("Loan offered successfully.", "success");
+      } catch (err) {
+        console.error(err);
+        showToast("Failed to offer loan.", "error");
+      }
+    }
+
+    async function submitDocument() {
+      const file = document.getElementById("borrowerDoc").files[0];
+      if (!file) return showToast("Upload the document", "error");
+      const hash = await getFileHash(file);
+      try {
+        await contract.methods.submitDocument(hash).send({ from: account });
+        showToast("Document submitted", "success");
+      } catch (err) {
+        console.error(err);
+        showToast("Submission failed", "error");
+      }
+    }
+
+    async function takeLoan() {
+      try {
+        await contract.methods.takeLoan().send({ from: account });
+        showToast("Loan taken successfully", "success");
+      } catch (err) {
+        console.error(err);
+        showToast("Take loan failed", "error");
+      }
+    }
+
+    async function repayLoan() {
+      try {
+        const loanAmount = await contract.methods.loanAmount().call();
+        const interestRate = await contract.methods.interestRate().call();
+        const loanStartTime = await contract.methods.loanStartTime().call();
+        const lenderAddress = await contract.methods.lender().call();
+
+        const now = Math.floor(Date.now()/1000);
+        const monthsElapsed = Math.floor((now - loanStartTime)/(30*24*60*60));
+        const interest = BigInt(loanAmount) * BigInt(interestRate) * BigInt(monthsElapsed + 1)/100n;
+        const totalDue = BigInt(loanAmount) + interest;
+
+        await contract.methods.repayLoan().send({ from: account, value: totalDue.toString() });
+        document.getElementById("repayStatus").innerText = "✅ Repayment done.";
+        document.getElementById("repayStatus").classList.remove("text-danger");
+        document.getElementById("repayStatus").classList.add("text-success");
+
+        if (account.toLowerCase() === lenderAddress.toLowerCase()) {
+          await contract.methods.resetLoan().send({ from: account });
+          document.getElementById("repayStatus").innerText = "✅ Loan repaid and reset.";
+        }
+      } catch (err) {
+        console.error(err);
+        document.getElementById("repayStatus").innerText = "❌ Repay failed.";
+      }
+    }
+
+    async function resetLoanManually() {
+      try {
+        await contract.methods.resetLoan().send({ from: account });
+        document.getElementById("repayStatus").innerText = "Loan reset manually by lender.";
+        document.getElementById("repayStatus").classList.remove("text-danger");
+        document.getElementById("repayStatus").classList.add("text-success");
+      } catch (err) {
+        console.error(err);
+        document.getElementById("repayStatus").innerText = "Manual reset failed.";
+      }
+    }
+  </script>
+</body>
+</html>
